# CarHireManagementSystem

./: README.md  app.py  constants.py  requirements.txt  utils.py
Database/: car_hire.sql
configurations/: db_connection.yaml
dao/: __init__.py  customer_dao.py
db_manager/: README.md  __init__.py  db_manager.py  setup.cfg
models/: customer.py
services/: customer_service.py
