[bumpversion]
current_version = 0.0.1

[bumpversion:file:./__init__.py]

[metadata]
name = mysql-db-manager
description = MySQL Database Manager
long_description = file: README.md
version = attr: .__version__
author = Eyad
author_email = eyadmshokry@gmail.com
keywords = MySQL, DB, Manager
url = TODO
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Client Libraries :: Python Modules

[options]
packages = find_namespace:
zip_safe = False
include_package_data = True
install_requires =
    Flask>=2.2.3
    mysql-connector-python>=8.0.32

[options.packages.find]
include =
    ./
    ./.*

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    db_manager = db_manager:DatabaseManager
